--- a/.drone.yml
+++ b/.drone.yml
@@ -1,16 +1,9 @@
 workspace:
   base: /go
-  path: src/github.com/Depado/dummy
+  path: src
 
-pipeline:
-  prerequisites:
-    image: "golang:latest"
-    commands: 
-      - go version
-      - go get -u github.com/golang/dep/cmd/dep
-      - dep ensure -vendor-only
-  
+pipeline:  
   build:
     image: "golang:latest"
     commands:
-      - go build
+      - go version
