--- a/.drone.yml
+++ b/.drone.yml
@@ -10,9 +10,6 @@ pipeline:
       - go build -o server
   
   docker:
-    image: "plugins/docker"
-    registry: quay.io
-    username: docker_username
-    password: docker_password
-    repo: ottintl/kube-echo-server
+    image: plugins/docker
+    repo: quay.io/ottintl/kube-echo-server
     tag: latest
