--- a/.drone.yml
+++ b/.drone.yml
@@ -12,5 +12,6 @@ pipeline:
   docker:
     image: plugins/docker
     repo: quay.io/ottintl/kube-echo-server
-    secrets: [ docker_username, docker_password ]
+    username: $$DOCKER_USERNAME
+    password: $$DOCKER_PASSWORD
     tag: latest
