--- a/.drone.yml
+++ b/.drone.yml
@@ -12,6 +12,6 @@ pipeline:
   docker:
     image: plugins/docker
     repo: quay.io/ottintl/kube-echo-server
-    username: $$DOCKER_USERNAME
-    password: $$DOCKER_PASSWORD
+    #username: $$DOCKER_USERNAME
+    #password: $$DOCKER_PASSWORD
     tag: latest
