rename the steps

--- a/.drone.yml
+++ b/.drone.yml
@@ -3,13 +3,13 @@ workspace:
   path: src
 
 pipeline:  
-  build:
+  test:
     image: "golang:latest"
     commands:
       - go version
       - go build -o server
   
-  docker:
+  build:
     image: plugins/docker
     repo: quay.io/ottintl/kube-echo-server
     #username: $$DOCKER_USERNAME
