--- a/.drone.yml
+++ b/.drone.yml
@@ -22,3 +22,23 @@ steps:
         from_secret: password
       registry: quay.io
 
+--
+kind: secret
+name: username
+get:
+  path: dev/cicd/quay
+  name: username
+
+--
+kind: secret
+name: password
+get:
+  path: dev/cicd/quay
+  name: password
+
+
+
+
+
+
+
