--- a/.drone.yml
+++ b/.drone.yml
@@ -17,9 +17,9 @@ steps:
     settings:
       repo: quay.io/ottintl/kube-echo-server
       username:
-        from_secret: quay_username
+        from_secret: username
       password: 
-        from_secret: quay_password
+        from_secret: password
       registry: quay.io
   
   - name: deploy
